--- a/style.css
+++ b/style.css
@@ -24,3 +24,8 @@ body {
     color:#757575;
     font-style: italic;
 }
+
+.translate {
+    color: white;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
+}
